small unintended right side gap fixed

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,4 @@
 p {
-  width: 100vw;
   background-color: var(--primary-dark-color);
   padding: 1rem;
   margin: 0;
